# gotorch

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  01-backward.go  02-learn.cc  02-learn.go  03-adam.cc  03-adam.go  03-adam.gop  03-adam.py  CMakeLists.txt  CNAME  CONTRIBUTING.md  Demo.cpp  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  adam.cc  backward_test.go  build.sh  build_and_test.sh  cuda.go  cuda_test.go  data.go  data_test.go  dcgan_test.go  dcgan_test.gop  device.go  device_test.go  dtype.go  dtype_test.go  functions_test.go  gloo.go  gloo_test.go  go.mod  go.sum  index.html  (+18 more)
.circleci/: Dockerfile  config.yml  install_gloo.sh
.scripts/: ci-install.sh  install-ci-tools.sh
at/: tensor.go
aten/: tensor.go
benchmark/: .gitignore  Dockerfile  Makefile  README.md  main.cpp  mnist.py
cgotorch/: .gitignore  Makefile  Makefile.linux  Makefile.linux-cuda101  Makefile.linux-cuda102  Makefile.linux-gpu  Makefile.rpi  build.sh  cgotorch.cc  cgotorch.h  ctorch.cc  ctorch.h  cuda.cc  cuda.h  device.cc  device.h  download_libtorch.sh  functional.cc  functional.h  gloo.cc  gloo.h  init.cc  init.h  ivalue.cc  ivalue.h  many_threads.cc  memory.cc  memory.h  mnist_dataset.cc  mnist_dataset.h  optim.cc  optim.h  parallel.cc  parallel.h  pickle.cc  pickle.h  tensor.cc  tensor.h  torch.cc  torch.h  (+3 more)
data/: data.go  data_test.go  dataloader.go  dataloader_test.go  dataset.go
doc/: allreduce.md  design.md  design_cn.md  develop_functionals_and_modules.md  develop_functionals_and_modules_cn.md  port_native_functions.md  shuffle_tarball.md  (+3 more)
(+154 files in other folders)
